k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # have 2 - is bad -> the same file system without them being aware of each other
                # and have them very distinctly cooperate with each other is a recipe for disaster.
                # it's possible - but requires a lot of more configuration
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
